--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -20,7 +20,7 @@
     </mat-sidenav>
 
     <mat-sidenav-content>
-      <router-outlet></router-outlet>
+      <app-main-content></app-main-content>
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
