started implementing the sidenav filter

--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,5 +1,5 @@
-<div class="project-container" [class.project-is-mobile]="mobileQuery.matches">
-  <mat-toolbar color="primary" class="project-toolbar">
+<div class="filter-container" [class.project-is-mobile]="mobileQuery.matches">
+  <mat-toolbar color="primary" class="filter-toolbar">
     <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
     <h1 class="project-app-name">Pirate Pete's Closet</h1>
   </mat-toolbar>
