--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,3 +1,5 @@
-<p>
-  main-content works!
-</p>
+<div class="main-container" class.[project-is-mobile]="mobileQuery.matches">
+  <mat-grid-list class="card-list">
+    
+  </mat-grid-list>
+</div>
