Updated Basic Items And Working on For Lopp

--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,3 +1,7 @@
-<p>
-  main-content works!
-</p>
+<ul>
+  <ng-template ngFor let-item [ngForOf]="items | async">
+    <li>
+      <app-item [item]="item"></app-item>
+    </li>
+  </ng-template>
+</ul>
