Finished implementation for unique item card data

--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,7 +1,1 @@
-<ul>
-  <ng-template ngFor let-item [ngForOf]="items | async">
-    <li>
-      <app-item [item]="item"></app-item>
-    </li>
-  </ng-template>
-</ul>
+<app-item></app-item>
