--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,9 +1,37 @@
-<mat-card class="item">
+<mat-card *ngFor="let item of items" class="item">
   <mat-card-header>
-    <mat-card-title>Shiba Inu</mat-card-title>
+    <mat-card-title>{{item.category}}</mat-card-title>
   </mat-card-header>
-  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
   <mat-card-content class="item-content">
+    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-chip-list class="attribute">
+          Size: <mat-chip>{{item.size}}</mat-chip>
+        </mat-chip-list>
+        <br><mat-divider></mat-divider><br>
+        <mat-chip-list class="attribute">
+          Condition: <mat-chip>{{item.condition}}</mat-chip>
+        </mat-chip-list>
+        <br><mat-divider></mat-divider><br>
+        <mat-chip-list class="attribute">
+          Season: <mat-chip>Spring</mat-chip>
+          <mat-chip>Summer</mat-chip>
+          <mat-chip>Fall</mat-chip>
+          <mat-chip>Winter</mat-chip>
+        </mat-chip-list>
+        <br><mat-divider></mat-divider>
+  </mat-card-content>
+  <mat-card-actions>
+      <button id="request" mat-stroked-button>Request</button>
+  </mat-card-actions>
+</mat-card>
+
+
+<!-- <mat-card *ngFor="let item of items" class="item">
+  <mat-card-header>
+    <mat-card-title>{{item.category}}</mat-card-title>
+  </mat-card-header>
+  <mat-card-content class="item-content">
+    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
     <mat-card class="attribute-top">
         <mat-chip-list>
           Size: <mat-chip>{{item.size}}</mat-chip>
@@ -11,7 +39,7 @@
     </mat-card>
     <mat-card class="attribute">
         <mat-chip-list>
-          Condition: <mat-chip>Used</mat-chip>
+          Condition: <mat-chip>{{item.condition}}</mat-chip>
         </mat-chip-list>
     </mat-card>
     <mat-card class="attribute">
@@ -24,6 +52,7 @@
     </mat-card>
   </mat-card-content>
   <mat-card-actions>
-    <button id="request" mat-stroked-button>Request</button>
+      <button id="request" mat-stroked-button>Request</button>
   </mat-card-actions>
 </mat-card>
+-->
