--- a/src/app/item/item.component.scss
+++ b/src/app/item/item.component.scss
@@ -8,23 +8,32 @@
   margin: 5%;
 }
 
-.item-content .attribute {
-  border-style: solid;
-  border-color: #E5E5E5;
-  border-bottom-color: 0;
-  border-width: 0.5px;
-  width: 100%;
-  height: auto;
-  margin-left: -17px;
-
+.item-content {
+  margin-bottom: 0;
 }
 
-.item-content .attribute-top {
-  border-style: solid;
-  border-color: #E5E5E5;
-  border-width: 0.5px;
-  width: 100%;
-  height: auto;
-  margin-left: -17px;
-  margin-top: -19px;
+// .item-content .attribute {
+//   border-style: solid;
+//   border-color: #E5E5E5;
+//   border-bottom-color: 0;
+//   border-width: 0.5px;
+//   width: 100%;
+//   height: auto;
+//   margin-left: -17px;
+//
+// }
+//
+// .item-content .attribute-top {
+//   border-style: solid;
+//   border-color: #E5E5E5;
+//   border-width: 0.5px;
+//   width: 100%;
+//   height: auto;
+//   margin-left: -17px;
+//   margin-top: -19px;
+// }
+//
+//
+.item mat-card-title {
+  margin-bottom: 25px;
 }
