--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,30 +1,35 @@
-<mat-card *ngFor="let item of items" class="item">
-  <mat-card-header>
-    <mat-card-title>{{item.category}}</mat-card-title>
-  </mat-card-header>
-  <mat-card-content class="item-content">
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-        <mat-chip-list class="attribute">
-          Size: <mat-chip>{{item.size}}</mat-chip>
-        </mat-chip-list>
-        <br><mat-divider></mat-divider><br>
-        <mat-chip-list class="attribute">
-          Condition: <mat-chip>{{item.condition}}</mat-chip>
-        </mat-chip-list>
-        <br><mat-divider></mat-divider><br>
-        <mat-chip-list class="attribute">
-          Season: <mat-chip>Spring</mat-chip>
-          <mat-chip>Summer</mat-chip>
-          <mat-chip>Fall</mat-chip>
-          <mat-chip>Winter</mat-chip>
-        </mat-chip-list>
-        <br><mat-divider></mat-divider>
-  </mat-card-content>
-  <mat-card-actions>
-      <button id="request" mat-stroked-button>Request</button>
-  </mat-card-actions>
-</mat-card>
+<mat-grid-list [cols]="breakpoint" rowHeight="700px" (window:resize)="onResize($event)">
 
+  <mat-grid-tile *ngFor="let item of items" class="tile">
+      <mat-card class="item">
+        <mat-card-header>
+          <mat-card-title>{{item.category}}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content class="item-content">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <mat-chip-list class="attribute">
+                Size: <mat-chip>{{item.size}}</mat-chip>
+              </mat-chip-list>
+              <br><mat-divider></mat-divider><br>
+              <mat-chip-list class="attribute">
+                Condition: <mat-chip>{{item.condition}}</mat-chip>
+              </mat-chip-list>
+              <br><mat-divider></mat-divider><br>
+              <mat-chip-list class="attribute">
+                Season: <mat-chip>Spring</mat-chip>
+                <mat-chip>Summer</mat-chip>
+                <mat-chip>Fall</mat-chip>
+                <mat-chip>Winter</mat-chip>
+              </mat-chip-list>
+              <br><mat-divider></mat-divider>
+        </mat-card-content>
+        <mat-card-actions>
+            <button id="request" mat-stroked-button>Request</button>
+        </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
+
+</mat-grid-list>
 
 <!-- <mat-card *ngFor="let item of items" class="item">
   <mat-card-header>
