--- a/src/app/item/item.component.scss
+++ b/src/app/item/item.component.scss
@@ -3,9 +3,10 @@
 }
 
 .item {
-  width: 20%;
   display: inline-block;
   margin: 5%;
+  min-width: 200px;
+  max-width: 400px;
 }
 
 .item-content {
