--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,18 +1,19 @@
 <app-item></app-item>
-<mat-grid-list cols="4" rowHeight="100px">
-  <mat-grid-tile
-    *ngFor="let tile of tiles"
-    [colspan]="tile.cols"
-    [rowspan]="tile.rows"
-    [style.background]="tile.color">
-    {{tile.text}}
+
+<mat-grid-list cols="4" rowHeight="1:1" gutterSize="1em">
+  <mat-grid-tile>
+    <img src="../../assets/images/jacket.jpg" alt="jacket" >
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <img src="../../assets/images/pants.jpg" alt="pants">
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <img src="../../assets/images/shoes.jpg" alt="shoes">
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <img src="../../assets/images/tshirt.jpg" alt="tshirt">
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <img src="../../assets/images/buttonDown.jpg" alt="button down shirt">
   </mat-grid-tile>
 </mat-grid-list>
-
-<ul>
-  <ng-template ngFor let-item [ngForOf]="items | async">
-    <li>
-      <app-item [item]="item"></app-item>
-    </li>
-  </ng-template>
-</ul>
