add shopping cart icon and badge

--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -2,6 +2,8 @@
   <mat-toolbar color="primary" class="project-toolbar">
     <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
     <h1 class="project-app-name">Pirate Pete's Closet</h1>
+    <span class="example-spacer"></span>
+    <button mat-icon-button class="shopping-cart"><mat-icon matBadge="15" matBadgeColor="warn">shopping_cart</mat-icon></button>
   </mat-toolbar>
 
   <mat-sidenav-container class="filter-sidenav-container"
