badge incriments with number of requests

--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -10,16 +10,11 @@
               <mat-chip-list class="attribute">
                 Size: <mat-chip>{{item.size}}</mat-chip>
               </mat-chip-list>
-              <br><mat-divider></mat-divider><br>
               <mat-chip-list class="attribute">
-                Condition: <mat-chip>{{item.condition}}</mat-chip>
+                Age: <mat-chip>{{item.age}}</mat-chip>
               </mat-chip-list>
-              <br><mat-divider></mat-divider><br>
               <mat-chip-list class="attribute">
-                Season: <mat-chip>Spring</mat-chip>
-                <mat-chip>Summer</mat-chip>
-                <mat-chip>Fall</mat-chip>
-                <mat-chip>Winter</mat-chip>
+                Catagory: <mat-chip>{{item.category}}</mat-chip>
               </mat-chip-list>
               <br><mat-divider></mat-divider>
         </mat-card-content>
