--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -3,7 +3,7 @@
     <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
     <h1 class="project-app-name">Pirate Pete's Closet</h1>
     <span class="example-spacer"></span>
-    <button mat-icon-button class="shopping-cart"><mat-icon matBadge="15" matBadgeColor="warn">shopping_cart</mat-icon></button>
+    <button mat-icon-button class="shopping-cart"><mat-icon matBadge={{badgeRequests}} matBadgeColor="warn">shopping_cart</mat-icon></button>
   </mat-toolbar>
 
   <mat-sidenav-container class="filter-sidenav-container"
@@ -38,7 +38,8 @@
       </mat-list>
     </mat-sidenav>
     <mat-sidenav-content>
-      <app-main-content></app-main-content>
+      <app-item (messageEvent)="receiveMessage($event)"></app-item>
+      <!--<app-main-content></app-main-content>-->
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
