--- a/src/app/item/item.component.scss
+++ b/src/app/item/item.component.scss
@@ -3,14 +3,11 @@
 }
 
 .item {
-  display: inline-block;
-  margin: 5%;
-  min-width: 200px;
-  max-width: 400px;
+  margin-bottom: 3%;
 }
 
 .item-content {
-  margin-bottom: 0;
+  margin-bottom: 2%;
 }
 
 // .item-content .attribute {
