--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,7 +1,6 @@
-<mat-grid-list [cols]="breakpoint" rowHeight="700px" (window:resize)="onResize($event)">
-
-  <mat-grid-tile *ngFor="let item of items" class="tile">
-      <mat-card class="item">
+<div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="2%" fxLayoutAlign="flex-start">
+  <ng-container *ngFor="let item of items" class="tile">
+      <mat-card class="item" fxFlex="0 1 calc(33.3% - 32px)">
         <mat-card-header>
           <mat-card-title>{{item.category}}</mat-card-title>
         </mat-card-header>
@@ -11,7 +10,7 @@
                 Size: <mat-chip>{{item.size}}</mat-chip>
               </mat-chip-list>
               <mat-chip-list class="attribute">
-                Age: <mat-chip>{{item.age}}</mat-chip>
+                Age: <mat-chip [disableRipple]="true">{{item.age}}</mat-chip>
               </mat-chip-list>
               <mat-chip-list class="attribute">
                 Catagory: <mat-chip>{{item.category}}</mat-chip>
@@ -22,9 +21,8 @@
             <button id="request" mat-stroked-button [disabled]="item.isDisabled" (click)="onRequest(item)">Request</button>
         </mat-card-actions>
     </mat-card>
-  </mat-grid-tile>
-
-</mat-grid-list>
+  </ng-container>
+</div>
 
 <!-- <mat-card *ngFor="let item of items" class="item">
   <mat-card-header>
