--- a/src/app/item/item.component.scss
+++ b/src/app/item/item.component.scss
@@ -1,14 +1,14 @@
 #request {
   width: 100%;
 }
-
+//
 .item {
   margin-bottom: 3%;
 }
-
-.item-content {
-  margin-bottom: 2%;
-}
+//
+//.item-content {
+//  margin-bottom: 2%;
+//}
 
 // .item-content .attribute {
 //   border-style: solid;
@@ -32,6 +32,6 @@
 // }
 //
 //
-.item mat-card-title {
-  margin-bottom: 25px;
-}
+//.item mat-card-title {
+//  margin-bottom: 25px;
+//}
