--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -11,29 +11,34 @@
     <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                  [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
       <mat-list>
-        <h3 mat-subheader>Sort by Season:</h3>
+        <h3 mat-subheader>Sort by Age:</h3>
         <div class="season-boxes">
-          <mat-checkbox>Spring</mat-checkbox>
-          <mat-checkbox>Summer</mat-checkbox>
-          <mat-checkbox>Autumn</mat-checkbox>
-          <mat-checkbox>Winter</mat-checkbox>
+          <mat-checkbox>No Age</mat-checkbox>
+          <mat-checkbox>Pre-K Age</mat-checkbox>
+          <mat-checkbox>Elementary School Age</mat-checkbox>
+          <mat-checkbox>Middle School Age</mat-checkbox>
+          <mat-checkbox>High School Age</mat-checkbox>
+          <mat-checkbox>Adult Age</mat-checkbox>
         </div>
       </mat-list>
       <mat-list>
-        <h3 mat-subheader>Sort by School:</h3>
+        <h3 mat-subheader>Sort by Catagory:</h3>
         <div class="school-boxes">
-          <mat-checkbox>Pre-School</mat-checkbox>
-          <mat-checkbox>Elementary</mat-checkbox>
-          <mat-checkbox>Middle School</mat-checkbox>
-          <mat-checkbox>High School</mat-checkbox>
+          <mat-checkbox>Tops</mat-checkbox>
+          <mat-checkbox>Bottoms</mat-checkbox>
+          <mat-checkbox>Jacket and Coats</mat-checkbox>
+          <mat-checkbox>Other</mat-checkbox>
         </div>
       </mat-list>
       <mat-list>
         <h3 mat-subheader>Sort by Size:</h3>
         <div class="size-boxes">
-          <mat-checkbox>Extra Small</mat-checkbox>
-          <mat-checkbox>Extra Large</mat-checkbox>
           <mat-checkbox>One size fits all</mat-checkbox>
+          <mat-checkbox>Extra Small</mat-checkbox>
+          <mat-checkbox>Small</mat-checkbox>
+          <mat-checkbox>Medium</mat-checkbox>
+          <mat-checkbox>Large</mat-checkbox>
+          <mat-checkbox>Extra Large</mat-checkbox>
         </div>
       </mat-list>
     </mat-sidenav>
