--- a/src/app/requestpage/requestpage.component.scss
+++ b/src/app/requestpage/requestpage.component.scss
@@ -13,3 +13,14 @@
 button{
   align: center;
 }
+h1.project-app-name {
+  margin-left: 8px;
+}
+
+.shopping-cart {
+  padding: 0 0px;
+  margin-right: 20px;
+}
+.example-spacer {
+  flex: 1 1 auto;
+}
