--- a/src/app/sidenav/item/item.component.html
+++ b/src/app/sidenav/item/item.component.html
@@ -18,7 +18,7 @@
               <br><mat-divider></mat-divider>
         </mat-card-content>
         <mat-card-actions>
-            <button id="request" mat-stroked-button [disabled]="item.isDisabled" (click)="onRequest(item)">Request</button>
+            <button id="request" mat-stroked-button [disabled]="item.isDisabled === 'true'" (click)="onRequest(item)">Request</button>
         </mat-card-actions>
     </mat-card>
   </ng-container>
