--- a/src/app/requestpage/requestpage.component.html
+++ b/src/app/requestpage/requestpage.component.html
@@ -5,29 +5,27 @@
     <span class="example-spacer"></span>
     <button mat-icon-button class="shopping-cart" routerLink="/creation"><mat-icon>edit</mat-icon></button>
     <button mat-icon-button class="shopping-cart" routerLink="/request"><mat-icon matBadge={{badgeRequests}} matBadgeColor="warn">shopping_cart</mat-icon></button>
-
-    <!--<div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="2%" fxLayoutAlign="flex-start">-->
-  <!--<ng-container *ngFor="let item of items" class="tile">-->
-    <!--<mat-card class="item" fxFlex="0 1 calc(33.3% - 32px)">-->
-      <!--<mat-card-header>-->
-        <!--<mat-card-title>{{item.title}}</mat-card-title>-->
-      <!--</mat-card-header>-->
-      <!--<img mat-card-image src="{{item.imageData}}" alt="Error: Could Not Retrieve Photo">-->
-      <!--<mat-card-content class="item-content">-->
-        <!--<mat-chip-list class="attribute">-->
-          <!--Size: <mat-chip>{{item.size}}</mat-chip>-->
-        <!--</mat-chip-list>-->
-        <!--<mat-chip-list class="attribute">-->
-          <!--Age: <mat-chip [disableRipple]="true">{{item.age}}</mat-chip>-->
-        <!--</mat-chip-list>-->
-        <!--<mat-chip-list class="attribute">-->
-          <!--Catagory: <mat-chip>{{item.category}}</mat-chip>-->
-        <!--</mat-chip-list>-->
-        <!--<br><mat-divider></mat-divider>-->
-      <!--</mat-card-content>-->
-      <!--<mat-card-actions>-->
-        <!--<button id="request" mat-stroked-button [disabled]="item.isDisabled" (click)="onRequest(item)">Request</button>-->
-      <!--</mat-card-actions>-->
-    <!--</mat-card>-->
-  <!--</ng-container>-->
-<!--</div>-->
+  </mat-toolbar>
+    <div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="2%" fxLayoutAlign="flex-start">
+      <ng-container *ngFor="let item of items" class="tile">
+        <mat-card class="item" fxFlex="0 1 calc(33.3% - 32px)">
+          <mat-card-header>
+            <mat-card-title>{{item.title}}</mat-card-title>
+          </mat-card-header>
+          <img mat-card-image src="{{item.imageData}}" alt="Error: Could Not Retrieve Photo">
+          <mat-card-content class="item-content">
+            <mat-chip-list class="attribute">
+              Size: <mat-chip>{{item.size}}</mat-chip>
+            </mat-chip-list>
+            <mat-chip-list class="attribute">
+              Age: <mat-chip [disableRipple]="true">{{item.age}}</mat-chip>
+            </mat-chip-list>
+            <mat-chip-list class="attribute">
+              Catagory: <mat-chip>{{item.category}}</mat-chip>
+            </mat-chip-list>
+            <br><mat-divider></mat-divider>
+          </mat-card-content>
+        </mat-card>
+      </ng-container>
+    </div>
+</div>
