--- a/src/app/requestpage/requestpage.component.scss
+++ b/src/app/requestpage/requestpage.component.scss
@@ -24,3 +24,11 @@ h1.project-app-name {
 .example-spacer {
   flex: 1 1 auto;
 }
+
+#unrequest {
+  width: 100%;
+}
+
+.item {
+  margin-bottom: 3%;
+}
