--- a/src/app/sidenav/item/item.component.html
+++ b/src/app/sidenav/item/item.component.html
@@ -13,7 +13,7 @@
                 Age: <mat-chip [disableRipple]="true">{{item.age}}</mat-chip>
               </mat-chip-list>
               <mat-chip-list class="attribute">
-                Catagory: <mat-chip>{{item.category}}</mat-chip>
+                Category: <mat-chip>{{item.category}}</mat-chip>
               </mat-chip-list>
               <br><mat-divider></mat-divider>
         </mat-card-content>
