--- a/src/app/creation/creation.component.html
+++ b/src/app/creation/creation.component.html
@@ -1,5 +1,9 @@
-<mat-toolbar color="primary" class="example-toolbar">
-  <h1 class="example-app-name">Pirate Pete's Closet</h1>
+<mat-toolbar color="primary" class="project-toolbar">
+  <button mat-icon-button routerLink="/"><mat-icon>home</mat-icon></button>
+  <h1 class="project-app-name">Pirate Pete's Closet</h1>
+  <span class="example-spacer"></span>
+  <button mat-icon-button class="shopping-cart" routerLink="/creation"><mat-icon>edit</mat-icon></button>
+  <button mat-icon-button class="shopping-cart" routerLink="/request"><mat-icon matBadge={{badgeRequests}} matBadgeColor="warn">shopping_cart</mat-icon></button>
 </mat-toolbar>
 
 <div class="main">
