--- a/src/app/creation/creation.component.scss
+++ b/src/app/creation/creation.component.scss
@@ -12,6 +12,16 @@
   margin-top: 30px;
   grid-area: main-stepper;
 }
+
+.shopping-cart {
+  padding: 0 0px;
+  margin-right: 20px;
+}
+
+.example-spacer {
+  flex: 1 1 auto;
+}
+
 mat-horizontal-stepper {
   margin-top: 40px;
 }
