--- a/src/app/requestpage/requestpage.component.html
+++ b/src/app/requestpage/requestpage.component.html
@@ -31,4 +31,7 @@
         </mat-card>
       </ng-container>
     </div>
+  <div class="request-button">
+    <button mat-raised-button color="primary" (click)="openDialog()">Request</button>
+  </div>
 </div>
