Change age and size values to make readable chips

--- a/src/app/creation/creation.component.html
+++ b/src/app/creation/creation.component.html
@@ -24,20 +24,20 @@
             <mat-form-field appearance="outline" >
               <mat-label>Age</mat-label>
               <mat-select formControlName="age">
-                <mat-option value="prek">Pre-K</mat-option>
-                <mat-option value="elementary">Elementary Age</mat-option>
-                <mat-option value="middle">Middle School Age</mat-option>
-                <mat-option value="high">High School Age</mat-option>
-                <mat-option value="adult">Adult</mat-option>
+                <mat-option value="Pre-K">Pre-K</mat-option>
+                <mat-option value="Elementary">Elementary Age</mat-option>
+                <mat-option value="Middle School">Middle School Age</mat-option>
+                <mat-option value="High School">High School Age</mat-option>
+                <mat-option value="Adult">Adult</mat-option>
               </mat-select>
             </mat-form-field>
             <mat-form-field appearance="outline">
               <mat-label>Sizing</mat-label>
               <mat-select formControlName="size">
-                <mat-option value="onesize">One Size Fits All</mat-option>
-                <mat-option value="small">Small</mat-option>
-                <mat-option value="medium">Medium</mat-option>
-                <mat-option value="large">Large</mat-option>
+                <mat-option value="One Size">One Size Fits All</mat-option>
+                <mat-option value="Small">Small</mat-option>
+                <mat-option value="Medium">Medium</mat-option>
+                <mat-option value="Large">Large</mat-option>
               </mat-select>
             </mat-form-field>
             <mat-form-field appearance="outline">
