removed email field validation

--- a/src/app/requestdialog/requestdialog.component.html
+++ b/src/app/requestdialog/requestdialog.component.html
@@ -2,7 +2,7 @@
 <div mat-dialog-content>
   <p>Once your request is packaged, we will send you an email. Expect your bundle to be complete in 3-5 days.</p>
   <mat-form-field>
-    <input matInput placeholder="Email" [formControl]="emailFormControl">
+    <input matInput placeholder="Email">
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
