Better size name

--- a/src/app/creation/creation.component.html
+++ b/src/app/creation/creation.component.html
@@ -34,7 +34,7 @@
             <mat-form-field appearance="outline">
               <mat-label>Sizing</mat-label>
               <mat-select formControlName="size">
-                <mat-option value="One Size">One Size Fits All</mat-option>
+                <mat-option value="One Size Fits All">One Size Fits All</mat-option>
                 <mat-option value="Small">Small</mat-option>
                 <mat-option value="Medium">Medium</mat-option>
                 <mat-option value="Large">Large</mat-option>
