add icons for transfer of components

--- a/src/app/creation/creation.component.html
+++ b/src/app/creation/creation.component.html
@@ -2,7 +2,9 @@
   <button mat-icon-button routerLink="/"><mat-icon>home</mat-icon></button>
   <h1 class="project-app-name">Pirate Pete's Closet</h1>
   <span class="example-spacer"></span>
-  <button mat-icon-button class="shopping-cart" routerLink="/creation"><mat-icon>edit</mat-icon></button>
+  <button mat-icon-button class="creation" routerLink="/creation"><mat-icon>edit</mat-icon></button>
+  <button mat-icon-button class="clothing" routerLink="/clothing"><mat-icon>loyalty</mat-icon></button>
+  <button mat-icon-button class="food" routerLink="/food"><mat-icon>local_pizza</mat-icon></button>
   <button mat-icon-button class="shopping-cart" routerLink="/request"><mat-icon>shopping_cart</mat-icon></button>
 </mat-toolbar>
 
