--- a/src/app/creation/creation.component.scss
+++ b/src/app/creation/creation.component.scss
@@ -13,7 +13,7 @@
   grid-area: main-stepper;
 }
 
-.shopping-cart {
+.shopping-cart .creation .clothing .food {
   padding: 0 0px;
   margin-right: 20px;
 }
